Fix broken css selector.

--- a/app/assets/stylesheets/header.css
+++ b/app/assets/stylesheets/header.css
@@ -13,7 +13,7 @@
 	float: right;
 }
 
-#profile: {
+#profile {
 	position: relative;
 }
 
